[package]
name = "rust_message_board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.2", features = ['form'] }
axum-macros = "0.3.6"
tokio = { version = "1", features = ["full"] }
tower-http = "0.4.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono"]}
serde = { version = "1.0.157", features = ["derive"] }
chrono = { version = "0.4.24", features = ['serde'] }
sanitize_html = "0.7.0"
